# qamd

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.toml  default.toml  default.yaml  index.html  install.bat  package.json  qamd.bat  setup-debian.sh  setup.sh  wrapper.h
src/: config.rs  html.rs  lib.rs  macros.rs  main.rs  report.rs
src/check/: common.rs  dictionary.rs  macros.rs  mod.rs  post.rs  value.rs  variable.rs
src/model/: anyvalue.rs  missing.rs  mod.rs  value.rs  variable.rs
src/readstat/: bindings.rs  context.rs  handler.rs  mod.rs  read.rs
src/readstat/csv/: mod.rs  read.rs
src/report/: anyvalue.rs  missing.rs  mod.rs
src/report/html/: custom.js  mod.rs
test/: data  foo %bar.dta  mtcars.csv  mtcars.sas7bdat  mtcars.sav  stopwords.txt  words.txt
