[package]
name = "qamd"
version = "0.1.0"
authors = ["Myles Offord <moffor@essex.ac.uk>"]

[dependencies]
clap = "2.31.2"
pbr = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4.6"
horrorshow = "0.6.4"
csv = "1.0.1"
regex = "1.0.4"
libz-sys = "1.0.25"

[build-dependencies]
bindgen = "0.26.3"
pkg-config = "0.3.11"
cfg-if = "0.1.7"

